ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules: 
   - http:
      paths:
      - backend:
          serviceName: prometheus-svc
          servicePort: 9091
